--- a/config.sample.yml
+++ b/config.sample.yml
@@ -19,3 +19,6 @@ mixiemail: replace_your_mixi_email
 mixipassword: replace_your_mixi_password
 twitter_token: replace_your_twitter_token
 twitter_secret: replace_your_twitter_secret
+
+bitly_api_key: replace_your_bit.ly_api_key
+bitly_login_id: replace_your_bit.ly_login_id
